base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: test-python
      port: 80
      targetPort: 5000
      nodePort: null
  selector:
    app: test-python
